# UnrealCrashServer

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-release.yml
src/: crash_endpoint.rs  crash_overview.rs  main.rs  utils.rs  webui.rs
templates/: crash_list.html
