[package]
name = "ue_crash_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "UECrashServer"
path = "src/main.rs"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.2"
quick-xml = "0.38.3"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
webhook = "2.1.2"
